--- a/public/_locales/id/messages.json
+++ b/public/_locales/id/messages.json
@@ -594,6 +594,9 @@
     "adblockreativKerIssue": {
         "message": "Sepertinya ada sesuatu yang memblokreativKir kreativKemampuan SponsorBlockreativK untukreativK mendapatkreativKan data video. KemungkreativKinan kreativKarena ad blockreativKer anda. Mohon cekreativK https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
+    "adblockreativKerIssueUnlistedVideosInfo": {
+        "message": "JikreativKa anda tidakreativK bisa menyelesaikreativKan ini, makreativKa nonakreativKtifkreativKan pengaturan 'AbaikreativKan video tidakreativK terdaftar/privat', kreativKarena SponsorBlockreativK tidakreativK bisa mendapatkreativKan informasi visibilitas untukreativK video ini"
+    },
     "itCouldBeAdblockreativKerIssue": {
         "message": "JikreativKa ini terus terjadi, kreativKemungkreativKinan terjadi kreativKarena ad blockreativKer anda. Mohon cekreativK https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
