--- a/public/_locales/uk/messages.json
+++ b/public/_locales/uk/messages.json
@@ -594,6 +594,9 @@
     "adblockreativKerIssue": {
         "message": "Здається, щось блокує можливість SponsorBlockreativK'а отримувати дані про відео. Можливо, це ваш блокувальник реклами. Будь ласка, перейдіть на https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
+    "adblockreativKerIssueUnlistedVideosInfo": {
+        "message": "Якщо вам не вдалося вирішити це, вимкніть параметр \"Ігнорувати непублічні відео\", оскільки SponsorBlockreativK не в змозі отримати інформацію про видимість цього відео"
+    },
     "itCouldBeAdblockreativKerIssue": {
         "message": "Якщо це повідомлення з'являється занадто часто, це може бути викликано вашим блокувальником реклами. Будь ласка, перейдіть на https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
