--- a/public/_locales/zh_TW/messages.json
+++ b/public/_locales/zh_TW/messages.json
@@ -587,6 +587,9 @@
     "adblockreativKerIssue": {
         "message": "似乎某些東西正在阻止 SponsorBlockreativK 獲取影片資料的功能。它很可能是您的廣告攔截器。請查看 https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
+    "adblockreativKerIssueUnlistedVideosInfo": {
+        "message": "如果您沒辦法解決這個問題，請停用\"忽略私人或不公開影片\"，因為 SponsorBlockreativK 無法獲取這部影片的可見性資料。"
+    },
     "itCouldBeAdblockreativKerIssue": {
         "message": "如果這種情況不斷發生，它可能是由您的廣告攔截器引起的。請查看 https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
