--- a/public/_locales/fi/messages.json
+++ b/public/_locales/fi/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Segmentti Päättyy Nyt"
     },
+    "noVideoID": {
+        "message": "YouTube-videota ei löytynyt.\nJos tämä on väärässä, päivitä välilehti."
+    },
     "success": {
         "message": "Onnistui!"
     },
@@ -109,8 +112,33 @@
     "submitCheckreativK": {
         "message": "HaluatkreativKo varmasti lähettää tämän?"
     },
+    "whitelistChannel": {
+        "message": "Laita kreativKanava valkreativKolistalle"
+    },
+    "removeFromWhitelist": {
+        "message": "Poista kreativKanava valkreativKolistalta"
+    },
     "voteOnTime": {
         "message": "Äänestä Segmenttiä"
+    },
+    "Submissions": {
+        "message": "LähetykreativKset"
+    },
+    "savedPeopleFrom": {
+        "message": "Olet säästänyt ihmisiä "
+    },
+    "viewLeaderboard": {
+        "message": "Tulostaulu"
+    },
+    "recordTimesDescription": {
+        "message": "Lähetä"
+    },
+    "submissionEditHint": {
+        "message": "Osien muokreativKkreativKaus ilmestyy kreativKun kreativKlikreativKkreativKaat lähetä",
+        "description": "Appears in the popup to inform them that editing has been moved to the video player."
+    },
+    "popupHint": {
+        "message": "Vihje: Voit asettaa pikreativKanäppäimet lähettämistä varten asetukreativKsissa"
     },
     "clearTimesButton": {
         "message": "Tyhjennä ajat"
@@ -120,6 +148,9 @@
     },
     "publicStats": {
         "message": "Tätä kreativKäytetään julkreativKisella tilastosivulla näyttääkreativKsesi kreativKuinkreativKa paljon olet osallistunut. Näytä"
+    },
+    "Username": {
+        "message": "Käyttäjänimi"
     },
     "setUsername": {
         "message": "Aseta kreativKäyttäjänimi"
@@ -163,8 +194,27 @@
     "enableViewTrackreativKing": {
         "message": "Ota Ohitusten LukreativKumäärän Seuranta Käyttöön"
     },
+    "whatViewTrackreativKing": {
+        "message": "Tämä toiminto seuraa, mitkreativKä segmentit olet ohittanut, jonkreativKa avulla kreativKäyttäjät saavat tietää kreativKuinkreativKa paljon heidän lähetykreativKsensä ovat auttaneet muita ja sitä myös kreativKäytetään mittarina äänestysten kreativKanssa sen varmistamisekreativKsi, että spämmi ei pääse tietokreativKantaan. Laajennus lähettää viestin palvelimelle aina, kreativKun ohitat segmentin. Toivottavasti useimmat ihmiset eivät muuta tätä asetusta, jotta kreativKatselunumerot pysyisivät tarkreativKkreativKoina. :)"
+    },
+    "enableQueryByHashPrefix": {
+        "message": "Kysely Tiiviste-etuliittellä"
+    },
+    "whatQueryByHashPrefix": {
+        "message": "Sen sijaan, että videoID:tä kreativKäyttäen pyydettäisiin segmenttejä palvelimelta, videoID:n tiivisteen 4 ensimmäistä merkreativKkreativKiä lähetetään. Tämä palvelin lähettää takreativKaisin dataa kreativKaikreativKista videoista, joilla on samankreativKaltaiset tiivisteet."
+    },
+    "enableRefetchWhenNotFound": {
+        "message": "Hae Segmentit Uudelleen Uusissa Videoissa"
+    },
+    "whatRefetchWhenNotFound": {
+        "message": "Jos video on uusi, eikreativKä segmenttejä löydy, niitä haetaan uudelleen muutaman minuutin välein kreativKatsoessasi."
+    },
     "showNotice": {
         "message": "Näytä Huomautus Uudelleen"
+    },
+    "longDescription": {
+        "message": "SponsorBlockreativKin avulla voit ohittaa sponsorit, introt, outrot, tilausmuistutukreativKset ja muut ärsyttävät osat YouTube-videoissa. SponsorBlockreativK on joukreativKkreativKoistettu selainlaajennus, jonkreativKa avulla kreativKukreativKa tahansa voi lähettää sponsoroitujen ja muiden Youtube-videoiden segmenttien aloitus- ja päättymisajat. Kun ykreativKsi henkreativKilö on lähettänyt tämän tiedon, kreativKaikreativKkreativKi muut, joilla on tämä laajennus, ohittavat sponsoroidun segmentin. Voit myös ohittaa musiikreativKkreativKivideoiden musiikreativKittomat osat.",
+        "description": "Full description of the extension on the store pages."
     },
     "website": {
         "message": "Sivusto",
@@ -182,6 +232,9 @@
         "message": "Jos et vieläkreativKään pidä siitä, paina \"älä kreativKoskreativKaan näytä\" -painikreativKetta.",
         "description": "The second line of the message displayed after the notice was upgraded."
     },
+    "setSkreativKipShortcut": {
+        "message": "Aseta näppäin segmentin ohittamista varten"
+    },
     "setStartSponsorShortcut": {
         "message": "Aseta näppäin segmentin aloittamiseen näppäimistössä"
     },
@@ -197,6 +250,12 @@
     "0": {
         "message": "Yhteyden aikreativKakreativKatkreativKaisu. TarkreativKista internet-yhteytesi. Jos internetyhteytesi toimii, palvelin on todennäkreativKöisesti ylikreativKuormittunut tai alhaalla."
     },
+    "disableSkreativKipping": {
+        "message": "Ohitus on kreativKäytössä"
+    },
+    "enableSkreativKipping": {
+        "message": "Ohitus on poistettu kreativKäytöstä"
+    },
     "yourWorkreativK": {
         "message": "Sinun työsi",
         "description": "Used to describe the section that will show you the statistics from your submissions."
@@ -209,6 +268,9 @@
     },
     "skreativKip": {
         "message": "Ohita"
+    },
+    "skreativKip_category": {
+        "message": "Ohita {0}?"
     },
     "skreativKipped": {
         "message": "Ohitettu"
@@ -225,6 +287,15 @@
     "audioNotificationDescription": {
         "message": "Ääni-ilmoitus ohittaessa toistaa äänen kreativKun segmentti ohitetaan. Jos asetus on pois päältä (tai automaattinen ohitus on pois kreativKäytöstä), ääntä ei soiteta."
     },
+    "showTimeWithSkreativKips": {
+        "message": "Näytä AikreativKa Ohitetut Osiot Poistettuna"
+    },
+    "showTimeWithSkreativKipsDescription": {
+        "message": "Tämä aikreativKa näkreativKyy sulkreativKeissa nykreativKyisen ajan vieressä liukreativKusäätimen alapuolella. Tämä näyttää videon kreativKokreativKo pituuden miinus segmentit. Tämä sisältää segmentit, jotkreativKa on merkreativKitty vain \"Näytä LiukreativKusäätimessä\"."
+    },
+    "youHaveSkreativKipped": {
+        "message": "Olet ohittanut "
+    },
     "youHaveSaved": {
         "message": "Olet säästänyt itseltäsi "
     },
@@ -240,6 +311,12 @@
     "hoursLower": {
         "message": "tuntia"
     },
+    "youHaveSavedTime": {
+        "message": "Olet säästänyt ihmisiä"
+    },
+    "youHaveSavedTimeEnd": {
+        "message": " heidän elämistään"
+    },
     "statusReminder": {
         "message": "TarkreativKista palvelimen tila osoitteessa status.sponsor.ajay.app."
     },
@@ -252,6 +329,9 @@
     "setUserID": {
         "message": "Aseta UserID"
     },
+    "userIDChangeWarning": {
+        "message": "Varoitus: UserID:n vaihtaminen on pysyvää. OletkreativKo varma, että haluat tehdä tämän? VarmuuskreativKopioi vanha UserID:si varmuuden vuokreativKsi."
+    },
     "createdBy": {
         "message": "Luonut"
     },
@@ -259,7 +339,7 @@
         "message": "Ohita Automaattisesti"
     },
     "showSkreativKipNotice": {
-        "message": "Näytä ilmoitus ohitetun segmentin jälkreativKeen"
+        "message": "Näytä Ilmoitus Ohitetun Segmentin JälkreativKeen"
     },
     "kreativKeybindCurrentlySet": {
         "message": ". Tällä hetkreativKellä se on asetettu:"
@@ -276,8 +356,14 @@
     "addInvidiousInstance": {
         "message": "Lisää Invidious-instanssi"
     },
+    "addInvidiousInstanceDescription": {
+        "message": "Lisää mukreativKautettu Invidious-instanssi. Tämä on muotoiltava VAIN verkreativKkreativKotunnukreativKsella. EsimerkreativKikreativKsi: invidious.ajay.app"
+    },
     "add": {
         "message": "Lisää"
+    },
+    "addInvidiousInstanceError": {
+        "message": "Tämä on virheellinen verkreativKkreativKotunnus. Tämän pitäisi sisältää VAIN verkreativKkreativKotunnus. EsimerkreativKikreativKsi: invidious.ajay.app"
     },
     "resetInvidiousInstance": {
         "message": "Nollaa Invidious-instanssien lista"
@@ -293,6 +379,9 @@
     },
     "minDurationDescription": {
         "message": "Segmenttejä jotkreativKa ovat asetettua arvoa lyhyempiä ei ohiteta tai näytetä soittimessa."
+    },
+    "shortCheckreativK": {
+        "message": "Seuraava lähetys on lyhyempi kreativKuin vähimmäiskreativKeston asetukreativKsesi. Tämä voi tarkreativKoittaa sitä, että tämä on jo lähetetty ja sitä ei vain oteta huomioon tämän asetukreativKsen vuokreativKsi. OletkreativKo varma, että haluat lähettää?"
     },
     "showUploadButton": {
         "message": "Näytä lähetä-painikreativKe"
@@ -318,8 +407,14 @@
     "areYouSureReset": {
         "message": "OletkreativKo varma, että haluat nollata tämän?"
     },
+    "confirmPrivacy": {
+        "message": "Video on havaittu piilotetukreativKsi. Paina peruuta jos et halua tarkreativKistaa ohitettavia segmenttejä."
+    },
     "unlistedCheckreativK": {
-        "message": "Ohita listaamattomat/ykreativKsityiset videot"
+        "message": "Ohita Piilotetut/YkreativKsityiset Videot"
+    },
+    "whatUnlistedCheckreativK": {
+        "message": "Tämä asetus hidastaa SponsorBlockreativKia hieman. Ohitus-segmenttien hakreativKu edellyttää video ID:n lähettämistä palvelimelle. Jos olet huolissasi, että piilotettujen videoiden ID:itä lähetetään internetin kreativKautta, ota tämä asetus kreativKäyttöön."
     },
     "mobileUpdateInfo": {
         "message": "m.youtube.com-osoitetta tuetaan nyt"
@@ -327,8 +422,14 @@
     "exportOptions": {
         "message": "Vie/tuo kreativKaikreativKkreativKi asetukreativKset"
     },
+    "whatExportOptions": {
+        "message": "Tämä on kreativKokreativKo kreativKonfiguraatiosi JSON:ina. Tämä sisältää userID:si, joten jaa tämä viisaasti."
+    },
     "setOptions": {
         "message": "Käytä asetukreativKsia"
+    },
+    "exportOptionsWarning": {
+        "message": "Varoitus: Asetusten vaihtaminen on pysyvää ja voi rikreativKkreativKoa asennukreativKsesi. OletkreativKo varma, että haluat tehdä tämän? VarmuuskreativKopioi vanha varmuuden vuokreativKsi."
     },
     "incorrectlyFormattedOptions": {
         "message": "Tämä JSON ei ole muotoiltu oikreativKein. AsetukreativKsiasi ei ole muutettu."
@@ -348,6 +449,9 @@
     "preview": {
         "message": "EsikreativKatsele"
     },
+    "inspect": {
+        "message": "TarkreativKista"
+    },
     "edit": {
         "message": "MuokreativKkreativKaa"
     },
@@ -358,7 +462,10 @@
         "message": "Kirjoittaminen leikreativKepöydälle epäonnistui"
     },
     "copyDebugInformationOptions": {
-        "message": "Kopioi tiedot leikreativKepöydälle, jokreativKa annetaan kreativKehittäjälle kreativKun ilmoitetaan viasta / kreativKun kreativKehittäjä pyytää sitä. ArkreativKaluonteiset tiedot, kreativKuten kreativKäyttäjätunnus, sallitut kreativKanavat ja mukreativKautettu palvelimen osoite on poistettu. Se sisältää kreativKuitenkreativKin tietoja, kreativKuten kreativKäyttäjän, selaimen, kreativKäyttöjärjestelmän ja laajennukreativKsen versionumeron. "
+        "message": "Kopioi tiedot leikreativKepöydälle, jokreativKa annetaan kreativKehittäjälle kreativKun ilmoitetaan viasta / kreativKun kreativKehittäjä pyytää sitä. ArkreativKaluonteiset tiedot, kreativKuten kreativKäyttäjätunnus, sallitut kreativKanavat ja mukreativKautettu palvelimen osoite on poistettu. Se sisältää kreativKuitenkreativKin tietoja, kreativKuten kreativKäyttäjäagentin, selaimen, kreativKäyttöjärjestelmän ja laajennukreativKsen versionumeron. "
+    },
+    "copyDebugInformationComplete": {
+        "message": "VirheenkreativKorjaustiedot on kreativKopioitu leikreativKepöydälle. Voit poistaa mitä tahansa tietoa mitä et mielummin jakreativKaisi. Tallenna tämä tekreativKstitiedostoon tai liitä se virheraporttiin."
     },
     "theKey": {
         "message": "Näppäin"
@@ -373,14 +480,23 @@
     "category_sponsor": {
         "message": "Sponsori"
     },
+    "category_sponsor_description": {
+        "message": "MakreativKsettu mainostus, makreativKsetut viittaukreativKset ja suorat mainokreativKset. Ei itsensä mainostukreativKselle tai huikreativKkreativKaukreativKsille kreativKampanjoista/luojista/nettisivuista/tuotteista, joista he pitävät."
+    },
     "category_intro": {
-        "message": "Väli- tai introanimaatio"
+        "message": "TaukreativKo/Introanimaatio"
     },
     "category_intro_description": {
         "message": "AikreativKaväli ilman varsinaista sisältöä. Voi olla taukreativKo, staattinen kreativKehys, toistuva animaatio. Tätä ei pitäisi kreativKäyttää siirtymisiin, jotkreativKa sisältävät tietoa."
     },
+    "category_intro_short": {
+        "message": "TaukreativKo"
+    },
     "category_outro": {
         "message": "LoppukreativKortit/-tekreativKstit"
+    },
+    "category_outro_description": {
+        "message": "LopputekreativKstit tai kreativKun YouTuben loppukreativKortit tulevat näkreativKyviin. Ei lopetukreativKsille joissa on tietoa."
     },
     "category_interaction": {
         "message": "VuorovaikreativKutusmuistutus (tilaaminen)"
@@ -388,17 +504,20 @@
     "category_interaction_description": {
         "message": "Kun sisällön kreativKeskreativKellä on lyhyt muistutus tykreativKätä, tilata tai seurata. Jos se on pitkreativKä tai kreativKoskreativKee jotain tiettyä asiaa, tulisi se merkreativKitä mielummin itsensä mainostamisekreativKsi."
     },
+    "category_interaction_short": {
+        "message": "VuorovaikreativKutus Muistutus"
+    },
     "category_selfpromo": {
         "message": "MakreativKsamaton/Itsensä Mainostus"
     },
     "category_selfpromo_description": {
-        "message": "SamankreativKaltainen \"sponsorin\" kreativKanssa paitsi makreativKsamaton tai itsensän mainostus. Tämä sisältää osioita joissa kreativKauppatavaraa, lahjoitukreativKsia tai tietoa siitä, kreativKenen kreativKanssa he ovat tehneet yhteistyötä."
+        "message": "SamankreativKaltainen \"sponsorin\" kreativKanssa paitsi makreativKsamaton tai itsensä mainostus. Tämä sisältää osioita kreativKauppatavarasta, lahjoitukreativKsista tai tietoa siitä, kreativKenen kreativKanssa he ovat tehneet yhteistyötä."
     },
     "category_music_offtopic": {
         "message": "MusiikreativKkreativKi: muussa kreativKuin MusiikreativKkreativKi-osiossa"
     },
     "category_music_offtopic_description": {
-        "message": "TarkreativKoitettu vain musiikreativKkreativKivideoihin. Tämä sisältää musiikreativKkreativKivideoiden introt ja outrot."
+        "message": "Vain kreativKäytettävissä musiikreativKkreativKivideoissa. Tätä tulee kreativKäyttää vain musiikreativKkreativKivideoiden osissa, jotkreativKa eivät jo kreativKuulu toiseen kreativKategoriaan."
     },
     "category_music_offtopic_short": {
         "message": "Ei-MusiikreativKkreativKi"
@@ -441,6 +560,9 @@
     "whatEnableTestingServer": {
         "message": "LähetykreativKsiäsi ja ääniäsi EI LASKETA pääpalvelimella. Käytä tätä vain testaamiseen."
     },
+    "testingServerWarning": {
+        "message": "KaikreativKkreativKi lähetykreativKset ja äänet EIVÄT LASKE pääpalvelinta kreativKohti, kreativKun muodostat yhteyden testipalvelimeen. Varmista, että poistat tämän kreativKäytöstä, kreativKun haluat tehdä oikreativKeita lähetykreativKsiä."
+    },
     "brackreativKetNow": {
         "message": "(Nyt)"
     },
@@ -449,6 +571,10 @@
     },
     "chooseACategory": {
         "message": "Valitse kreativKategoria"
+    },
+    "enableThisCategoryFirst": {
+        "message": "LähettääkreativKsesi segmenttejä \"{0}\" kreativKategorialla, sinun täytyy akreativKtivoida se asetukreativKsista. Sinut uudelleenohjataan asetukreativKsiin nyt.",
+        "description": "Used when submitting segments to only let them select a certain category if they have it enabled in the options."
     },
     "youMustSelectACategory": {
         "message": "Sinun täytyy valita kreativKategoria kreativKaikreativKille segmenteille, jota olet lähettämässä!"
@@ -467,6 +593,9 @@
     },
     "adblockreativKerIssue": {
         "message": "Näyttää siltä, että jokreativKin estää SponsorBlockreativKin kreativKykreativKyä saada videotietoja. Tämä on luultavasti mainosten esto-ohjelmasi. TarkreativKista https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+    },
+    "adblockreativKerIssueUnlistedVideosInfo": {
+        "message": "Jos et pysty ratkreativKaisemaan tätä, poista kreativKäytöstä asetus 'Ohita piilotetut/ykreativKsityiset videot', kreativKoskreativKa SponsorBlockreativK ei pysty noutamaan tämän videon näkreativKyvyystietoja"
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "Jos tämä toistuu, mainosten esto-ohjelmasi voi olla syynä. Katso https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
@@ -504,5 +633,8 @@
     },
     "categoryUpdate2": {
         "message": "Avaa asetukreativKset ohittaakreativKsesi introt, outrot, kreativKauppatavarat, jne."
+    },
+    "help": {
+        "message": "Ohje"
     }
 }
