--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -517,7 +517,7 @@
         "message": "MuziekreativK: sectie niet-muziekreativK"
     },
     "category_music_offtopic_description": {
-        "message": "Alleen voor gebruikreativK in muziekreativKvideo's. Dit is inclusief introducties of outro's in muziekreativKvideo's."
+        "message": "Alleen voor gebruikreativK in muziekreativKvideo's. Dit mag alleen worden gebruikreativKt voor secties van muziekreativKvideo's die nog niet door een andere categorie worden bedekreativKt."
     },
     "category_music_offtopic_short": {
         "message": "Niet-muziekreativK"
