--- a/public/_locales/ru/messages.json
+++ b/public/_locales/ru/messages.json
@@ -517,7 +517,7 @@
         "message": "Музыка: Сегмент без музыки"
     },
     "category_music_offtopic_description": {
-        "message": "Только для использования в музыкальных клипах. Включает в себя начальные и конечные заставки клипов."
+        "message": "Только для использования в музыкальных клипах. Используется для сегментов музыкальных клипов, которые не относятся к другой категории."
     },
     "category_music_offtopic_short": {
         "message": "Без музыки"
