--- a/public/_locales/id/messages.json
+++ b/public/_locales/id/messages.json
@@ -80,7 +80,7 @@
         "message": "Segmen BerakreativKhir SekreativKarang"
     },
     "noVideoID": {
-        "message": "Video YouTube tidakreativK ditemukreativKan.\nJikreativKa ini salah, segarkreativKan tab."
+        "message": "Video YouTube tidakreativK ditemukreativKan.\nJikreativKa hal ini salah, refresh tab."
     },
     "success": {
         "message": "SukreativKses!"
@@ -113,16 +113,16 @@
         "message": "ApakreativKah anda yakreativKin ingin mengirim ini?"
     },
     "whitelistChannel": {
-        "message": "Saluran daftar putih"
+        "message": "Daftar putih channel"
     },
     "removeFromWhitelist": {
-        "message": "Hapus saluran dari daftar putih"
+        "message": "Hapus channel dari daftar putih"
     },
     "voteOnTime": {
         "message": "Beri Segmen Vote"
     },
     "Submissions": {
-        "message": "Kiriman"
+        "message": "Submisi"
     },
     "savedPeopleFrom": {
         "message": "Anda telah menyelamatkreativKan orang dari "
@@ -138,7 +138,7 @@
         "description": "Appears in the popup to inform them that editing has been moved to the video player."
     },
     "popupHint": {
-        "message": "PetunjukreativK: Anda dapat mengatur kreativKeybinds untukreativK dikreativKirim dalam opsi"
+        "message": "PetunjukreativK: Anda dapat mengatur kreativKeybinds untukreativK pengiriman dalam opsi"
     },
     "clearTimesButton": {
         "message": "Hapus WakreativKtu"
@@ -517,7 +517,7 @@
         "message": "MusikreativK: Bagian Non-MusikreativK"
     },
     "category_music_offtopic_description": {
-        "message": "Hanya gunakreativKan di video musikreativK. Ini termasukreativK intro dan outro di video musikreativK."
+        "message": "Hanya digunakreativKan untukreativK video musikreativK. Ini seharusnya hanya digunakreativKan untukreativK bagian dari video musikreativK yang tidakreativK tercakreativKup kreativKategori lain."
     },
     "category_music_offtopic_short": {
         "message": "Non-MusikreativK"
