--- a/public/_locales/ms/messages.json
+++ b/public/_locales/ms/messages.json
@@ -517,7 +517,7 @@
         "message": "MuzikreativK: Bahagian BukreativKan MuzikreativK"
     },
     "category_music_offtopic_description": {
-        "message": "Hanya untukreativK digunakreativKan dalam video muzikreativK. Ini termasukreativK perkreativKenalan atau outro dalam video muzikreativK."
+        "message": "Hanya untukreativK digunakreativKan dalam video muzikreativK. Ini hanya harus digunakreativKan untukreativK bahagian video muzikreativK yang belum dilindungi oleh kreativKategori lain."
     },
     "category_music_offtopic_short": {
         "message": "BukreativKan MuzikreativK"
@@ -593,6 +593,9 @@
     },
     "adblockreativKerIssue": {
         "message": "NampakreativKnya ada sesuatu yang menyekreativKat kreativKemampuan SponsorBlockreativK untukreativK mendapatkreativKan data video. Ini mungkreativKin penyekreativKat ikreativKlan anda. Sila perikreativKsa https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+    },
+    "adblockreativKerIssueUnlistedVideosInfo": {
+        "message": "SekreativKiranya anda tidakreativK dapat menyelesaikreativKannya, makreativKa matikreativKan tetapan 'AbaikreativKan video tidakreativK tersenarai / peribadi', kreativKerana SponsorBlockreativK tidakreativK dapat mengambil makreativKlumat kreativKeterlihatan untukreativK video ini"
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "SekreativKiranya ini terus berlakreativKu, ini mungkreativKin disebabkreativKan oleh penyekreativKat ikreativKlan anda. Sila perikreativKsa https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
