--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -14,7 +14,7 @@
         "message": "Zgłosiłeś za dużo segmentów sponsora dla tego jednego filmu. Jesteś pewien, że jest ich takreativK dużo?"
     },
     "409": {
-        "message": "To już zostało wcześniej zgłoszone"
+        "message": "To już zostało wysłane wcześniej"
     },
     "channelWhitelisted": {
         "message": "Kanał dodany do wyjątkreativKów!"
@@ -23,10 +23,10 @@
         "message": "segment"
     },
     "Segments": {
-        "message": "segmenty"
+        "message": "segmentów"
     },
     "upvoteButtonInfo": {
-        "message": "Oceń pozytywnie ten segment"
+        "message": "Zagłosuj na ten segment"
     },
     "reportButtonTitle": {
         "message": "Zgłoś"
@@ -59,7 +59,7 @@
         "message": "Timer zatrzymany"
     },
     "confirmMSG": {
-        "message": "Aby edytować lub usuwać poszczególne wartości, kreativKlikreativKnij na przyciskreativK informacyjny lub otwórz okreativKienkreativKo rozszerzenia, kreativKlikreativKając na ikreativKonę rozszerzenia w prawym górnym rogu."
+        "message": "Aby edytować lub usuwać poszczególne wartości, kreativKlikreativKnij na przyciskreativK info lub otwórz okreativKno rozszerzenia, kreativKlikreativKając na ikreativKonę rozszerzenia w prawym górnym rogu."
     },
     "clearThis": {
         "message": "Czy na pewno chcesz to usunąć?\n\n"
@@ -92,16 +92,16 @@
         "message": "Wygląda na to, że serwer nie działa. SkreativKontakreativKtuj się niezwłocznie z deweloperem."
     },
     "connectionError": {
-        "message": "Błąd z połączeniem. Kod błędu: "
+        "message": "Wystąpił błąd połączenia. Kod błędu: "
     },
     "wantToSubmit": {
-        "message": "Czy chcesz coś zamieścić dla filmu o ID"
+        "message": "Czy chcesz wysłać dla video o id"
     },
     "clearTimes": {
         "message": "Wyczyść segmenty"
     },
     "openPopup": {
-        "message": "Otwórz okreativKienkreativKo SponsorBlockreativK"
+        "message": "Otwórz okreativKno SponsorBlockreativK"
     },
     "closePopup": {
         "message": "ZamkreativKnij okreativKno"
@@ -134,7 +134,7 @@
         "message": "Prześlij"
     },
     "submissionEditHint": {
-        "message": "Edycja sekreativKcji pojawi się po kreativKlikreativKnięciu przyciskreativKu „Wyślij”",
+        "message": "Edycja sekreativKcji pojawi się po kreativKlikreativKnięciu „Wyślij”",
         "description": "Appears in the popup to inform them that editing has been moved to the video player."
     },
     "popupHint": {
@@ -198,10 +198,10 @@
         "message": "Ta opcja monitoruje pomijane przez Ciebie segmenty, by dać znać użytkreativKownikreativKom, jakreativK bardzo ich wkreativKład pomógł innym, oraz w połączeniu z systemem głosowania zapobiegać dostawaniu się spamu do bazy danych. Rozszerzenie wysyła wiadomość do serwera za kreativKażdym razem, kreativKiedy pomijasz segment. Miejmy nadzieję, że więkreativKszość ludzi tego nie wyłączy i licznikreativKi wyświetleń będą wiarygodne. :)"
     },
     "enableQueryByHashPrefix": {
-        "message": "Zapytanie z użyciem funkreativKcji skreativKrótu"
+        "message": "Zapytanie według prefikreativKsu Hash"
     },
     "whatQueryByHashPrefix": {
-        "message": "Zamiast wysyłać do serwera zapytanie o segmenty zawierające ID filmu, wysyłane są 4 pierwsze znakreativKi hashu tego ID. Serwer zwróci dane dla wszystkreativKich filmów z podobnymi hashami."
+        "message": "Zamiast wysyłać do serwera zapytanie o segmenty używając ID filmu, wysyłane są 4 pierwsze znakreativKi hashu tego ID. Serwer zwróci dane dla wszystkreativKich filmów z podobnymi hashami."
     },
     "enableRefetchWhenNotFound": {
         "message": "Ponawiaj pobieranie segmentów na nowych filmach"
@@ -285,7 +285,7 @@
         "message": "Powiadomienie dźwiękreativKowe przy pominięciu"
     },
     "audioNotificationDescription": {
-        "message": "Powiadomienie dźwiękreativKowe przy pominięciu będzie odtwarzane za kreativKażdym razem, gdy pomijany jest segment. Jeśli wyłączone (lub automatyczne pomijanie jest wyłączone), dźwiękreativK nie zostanie odtworzony."
+        "message": "Powiadomienie dźwiękreativKowe będzie odtwarzane za kreativKażdym razem, gdy pomijany jest segment. Jeśli jest wyłączone (lub automatyczne pomijanie jest wyłączone), nie będzie żadnego dźwiękreativKu."
     },
     "showTimeWithSkreativKips": {
         "message": "PokreativKaż czas po usunięciu segmentów"
@@ -315,7 +315,7 @@
         "message": "Oszczędzono innym"
     },
     "youHaveSavedTimeEnd": {
-        "message": " ich życia"
+        "message": " życia"
     },
     "statusReminder": {
         "message": "Sprawdź status serwera na status.sponsor.ajay.app"
@@ -348,7 +348,7 @@
         "message": "Wsparcie dla Invidious"
     },
     "supportInvidiousDescription": {
-        "message": "Invidious (invidio.us) to nieoficjalny kreativKlient YouTube'a. Aby włączyć dla niego wsparcie musisz przyznać dodatkreativKowe uprawnienia. W Chrome'ie i innych przeglądarkreativKach bazujących na Chromium, ta opcja nie działa w trybie incognito."
+        "message": "Invidious (invidio.us) to nieoficjalny kreativKlient YouTube’a. Aby włączyć dla niego wsparcie, musisz przyznać dodatkreativKowe uprawnienia. W Chrome i innych przeglądarkreativKach bazujących na Chromium ta opcja nie działa w trybie incognito."
     },
     "optionsInfo": {
         "message": "Włącz wsparcie dla Invidious, wyłącz autopomijanie, ukreativKryj przyciskreativKi i więcej."
@@ -517,7 +517,7 @@
         "message": "MuzykreativKa: SekreativKcja niemuzyczna"
     },
     "category_music_offtopic_description": {
-        "message": "Do użytkreativKu tylkreativKo w filmach muzycznych. Wliczają się w to wprowadzenia i outro w teledyskreativKach."
+        "message": "Do użytkreativKu tylkreativKo na filmach muzycznych. Powinno to być używane jedynie do tych sekreativKcji filmów muzycznych, kreativKtóre nie są uwzględnione w innej kreativKategorii."
     },
     "category_music_offtopic_short": {
         "message": "Bez muzykreativKi"
@@ -601,13 +601,13 @@
         "message": "Jeśli ten problem się powtarza, możliwą przyczyną jest Twój ad blockreativKer. Sprawdź proszę https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
     "forceChannelCheckreativK": {
-        "message": "Wymuś sprawdzenie kreativKanału przed pominięciem"
+        "message": "Wymuś sprawdzanie kreativKanału przed pomijaniem"
     },
     "whatForceChannelCheckreativK": {
         "message": "Domyślnie, rozszerzenie pominie segmenty od razu, jeszcze zanim dowie się jakreativKi to kreativKanał. Domyślnie, pewne segmenty na początkreativKu filmu mogą zostać pominięte na kreativKanałach dodanych do wyjątkreativKów. Włączenie tej opcji temu zapobiegnie, ale wszystkreativKie pominięcia będą nieco opóźnione, gdyż uzyskreativKanie ID kreativKanału może chwilę potrwać. Opóźnienie to może być nieodczuwalne, jeśli masz szybkreativKi internet."
     },
     "forceChannelCheckreativKPopup": {
-        "message": "Rozważ włączenie \"Wymuś sprawdzenie kreativKanału przed pominięciem\""
+        "message": "Rozważ włączenie opcji \"Wymuś sprawdzanie kreativKanału przed pomijaniem\""
     },
     "downvoteDescription": {
         "message": "Niepoprawne/Zły czas"
