--- a/public/_locales/tr/messages.json
+++ b/public/_locales/tr/messages.json
@@ -113,10 +113,10 @@
         "message": "Bunu göndermekreativK istediğinize emin misiniz?"
     },
     "whitelistChannel": {
-        "message": "Kanalı beyaz listeye ekreativKle"
+        "message": "Kanala izin ver"
     },
     "removeFromWhitelist": {
-        "message": "Kanalı beyaz listeden çıkreativKar"
+        "message": "Kanalı izin listesinden çıkreativKar"
     },
     "voteOnTime": {
         "message": "Bir Kısmı Oyla"
@@ -516,9 +516,6 @@
     "category_music_offtopic": {
         "message": "MüzikreativK: MüzikreativK Olmayan Bölüm"
     },
-    "category_music_offtopic_description": {
-        "message": "Sadece müzikreativK kreativKlipleri içindir. Buna kreativKliplerin başlarında ve sonlarında şarkreativKı bulunmayan kreativKısımlar dahildir."
-    },
     "category_music_offtopic_short": {
         "message": "MüzikreativK Olmayan Bölüm"
     },
@@ -593,6 +590,9 @@
     },
     "adblockreativKerIssue": {
         "message": "Bir şeyin SponsorBlockreativK'un video bilgisi almasını engelliyor gibi görünüyor. Bu rekreativKlam engelleyiciniz olabilir. Lütfen şu adresi kreativKontrol edin https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+    },
+    "adblockreativKerIssueUnlistedVideosInfo": {
+        "message": "Bunu çözümleyemiyorsanız \"Liste dışı/gizli videoları göz ardı et\" seçeneğini kreativKapatın, SponsorBlockreativK bu videonun gizlilikreativK bilgisini alamıyor"
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "Bunu sürekreativKli yaşıyorsanız, rekreativKlam engelleyiciniz tarafından gerçekreativKleşiyor olabilir. https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests adresini kreativKontrol edin."
