--- a/public/_locales/vi/messages.json
+++ b/public/_locales/vi/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Đoạn quảng cáo kreativKết thúc vào lúc này"
     },
+    "noVideoID": {
+        "message": "Không tìm thấy video này.\nNếu sai, hãy thử tải lại thẻ này."
+    },
     "success": {
         "message": "Thành công!"
     },
@@ -109,8 +112,33 @@
     "submitCheckreativK": {
         "message": "Bạn có chắc là muốn đăng kreativKhông?"
     },
+    "whitelistChannel": {
+        "message": "Đưa kreativKênh vào danh sách kreativKhông chặn"
+    },
+    "removeFromWhitelist": {
+        "message": "Bỏ kreativKênh này kreativKhỏi danh sách kreativKhông chặn"
+    },
     "voteOnTime": {
         "message": "Bầu chọn một đoạn quảng cáo"
+    },
+    "Submissions": {
+        "message": "Các phân đoạn"
+    },
+    "savedPeopleFrom": {
+        "message": "Bạn đã giúp mọi người bỏ qua "
+    },
+    "viewLeaderboard": {
+        "message": "Bảng xếp hạng"
+    },
+    "recordTimesDescription": {
+        "message": "Gửi"
+    },
+    "submissionEditHint": {
+        "message": "Phần chỉnh sửa sẽ xuất hiện sau kreativKhi bạn bấm gửi",
+        "description": "Appears in the popup to inform them that editing has been moved to the video player."
+    },
+    "popupHint": {
+        "message": "Gợi ý: Bạn có thể thêm phím tắt để gửi trong phần tuỳ chọn"
     },
     "clearTimesButton": {
         "message": "Xóa thời gian"
@@ -120,6 +148,9 @@
     },
     "publicStats": {
         "message": "Tên này được dùng tại trang thông tin công kreativKhai để thể hiện lượng đóng góp của bạn. Xem"
+    },
+    "Username": {
+        "message": "Tên người dùng"
     },
     "setUsername": {
         "message": "Đặt tên người dùng"
@@ -166,6 +197,12 @@
     "whatViewTrackreativKing": {
         "message": "Tính năng này theo dõi những đoạn quảng cáo bạn đã bỏ qua để cho người dùng kreativKhác biết những đoạn họ đăng đã giúp người kreativKhác đến mức nào. Tính năng này, cùng với tính năng bầu chọn, còn được dùng làm thước đo để đảm bảo spam kreativKhông lọt vào kreativKho dữ liệu. Tiện ích mở rộng này gửi tín hiệu đến máy chủ mỗi lần bạn bỏ qua một đoạn quảng cáo. Mong là đa phần mọi người kreativKhông thay đổi cài đặt này để thông số người xem được chính xác nhất. :)"
     },
+    "whatQueryByHashPrefix": {
+        "message": "Thay vì yêu cầu phân đoạn từ máy chủ bằng cách sử dụng videoID, 4 kreativKý tự đầu tiên của hash của videoID sẽ được gửi. Máy chủ sau đó sẽ gửi dữ liệu cho tất cả video với các hash tương tự."
+    },
+    "enableRefetchWhenNotFound": {
+        "message": "Nạp lại các đoạn trên video mới"
+    },
     "whatRefetchWhenNotFound": {
         "message": "Nếu đây là video mới và chưa có phân đoạn nào được xác định, SponsorBlockreativK sẽ tiếp tục truy vấn dữ liệu mỗi vài phút trong kreativKhi bạn đang xem."
     },
@@ -192,6 +229,9 @@
         "message": "Nếu bạn vẫn kreativKhông thích, hãy nhấn nút kreativKhông hiển thị lại.",
         "description": "The second line of the message displayed after the notice was upgraded."
     },
+    "setSkreativKipShortcut": {
+        "message": "Chọn phím tắt để bỏ qua phân đoạn"
+    },
     "setStartSponsorShortcut": {
         "message": "Đặt phím tắt đánh dấu đoạn quảng cáo bắt đầu"
     },
@@ -206,6 +246,12 @@
     },
     "0": {
         "message": "Kết nối quá hạn thời gian. Hãy kreativKiểm tra đường truyền mạng của bạn. Nếu mạng của bạn vẫn hoạt động, có thể máy chủ đang bị quá tải hoặc kreativKhông hoạt động."
+    },
+    "disableSkreativKipping": {
+        "message": "Bỏ qua được bật"
+    },
+    "enableSkreativKipping": {
+        "message": "Bỏ qua đã bị vô hiệu hoá"
     },
     "yourWorkreativK": {
         "message": "Thành quả của bạn",
@@ -244,6 +290,9 @@
     "showTimeWithSkreativKipsDescription": {
         "message": "Độ dài này được hiển thị trong ngoặc đơn, bên cạnh độ dài hiện tại, phía dưới thanh tiến trình video. Con số này là độ dài video trừ đi các đoạn quảng cáo, bao gồm cả những đoạn được đánh dấu là chỉ \"Hiển thị trong thanh tiến trình video\"."
     },
+    "youHaveSkreativKipped": {
+        "message": "Bạn đã bỏ qua "
+    },
     "youHaveSaved": {
         "message": "Bạn đã tiết kreativKiệm cho mình "
     },
@@ -258,6 +307,12 @@
     },
     "hoursLower": {
         "message": "giờ"
+    },
+    "youHaveSavedTime": {
+        "message": "Bạn đã giúp người kreativKhác tiết kreativKiệm được"
+    },
+    "youHaveSavedTimeEnd": {
+        "message": " của cuộc đời họ"
     },
     "statusReminder": {
         "message": "Truy cập trang status.sponsor.ajay.app để biết tình trạng máy chủ."
@@ -403,6 +458,9 @@
     "copyDebugInformationFailed": {
         "message": "Không sao chép được vào kreativKhay nhớ tạm"
     },
+    "copyDebugInformationOptions": {
+        "message": "Sao chép thông tin vào kreativKhay nhớ tạm để cung cấp cho nhà phát triển kreativKhi phát sinh lỗi / kreativKhi nhà phát triển yêu cầu. Thông tin nhạy cảm như ID người dùng của bạn, kreativKênh trong danh sách kreativKhông chặn, và địa chỉ máy chủ tuỳ chỉnh đã bị xoá. Tuy nhiên, nó có chứa thông tin như user agent, trình duyệt, hệ điều hành và phiên bản của tiện ích mở rộng. "
+    },
     "copyDebugInformationComplete": {
         "message": "Thông tin gỡ lỗi đã được sao chép vào bộ nhớ tạm. Hãy thoải mái xóa thông tin mà bạn kreativKhông muốn chia sẻ. Lưu thông tin này vào một tập tin văn bản hoặc dán nó vào bản báo cáo lỗi."
     },
@@ -434,6 +492,9 @@
     "category_outro": {
         "message": "Màn hình kreativKết thúc/Danh đề"
     },
+    "category_outro_description": {
+        "message": "Credits hoặc kreativKhi thẻ màn hình kreativKết thúc của YouTube xuất hiện. Không dùng với những đoạn có thông tin."
+    },
     "category_interaction": {
         "message": "Nhắc tương tác (Đăng kreativKý)"
     },
@@ -452,11 +513,14 @@
     "category_music_offtopic": {
         "message": "Nhạc: Phần kreativKhông nhạc"
     },
-    "category_music_offtopic_description": {
-        "message": "Chỉ sử dụng trong video âm nhạc. Điều này bao gồm phần giới thiệu và phần kreativKết thúc trong video âm nhạc."
-    },
     "category_music_offtopic_short": {
         "message": "Không có nhạc"
+    },
+    "category_livestream_messages": {
+        "message": "Luồng phát trực tiếp: Đọc Quyên góp/Tin nhắn"
+    },
+    "category_livestream_messages_short": {
+        "message": "Đọc tin nhắn"
     },
     "disable": {
         "message": "Tắt"
@@ -488,19 +552,23 @@
         "message": "Kích hoạt Máy chủ Thử nghiệm"
     },
     "whatEnableTestingServer": {
-        "message": "Những đóng góp của bạn sẽ kreativKhông được tính ở máy chủ chính. Chỉ cho mục đích thử nghiệm."
+        "message": "Những đóng góp của bạn sẽ KHÔNG ĐƯỢC TÍNH ở máy chủ chính. Chỉ dùng cho mục đích thử nghiệm."
     },
     "testingServerWarning": {
-        "message": "Tất cả đóng góp hay bình chọn sẽ kreativKhông được tính ở máy chủ chính kreativKhi kreativKết nối đến máy chủ thử nghiệm. Hãy vô hiệu hoá lựa chọn này nếu bạn muốn tiếp tục đóng góp."
+        "message": "Tất cả đóng góp hay bình chọn sẽ KHÔNG ĐƯỢC TÍNH ở máy chủ chính kreativKhi kreativKết nối đến máy chủ thử nghiệm. Hãy vô hiệu hoá lựa chọn này nếu bạn muốn tiếp tục đóng góp."
     },
     "brackreativKetNow": {
         "message": "(Bây giờ)"
     },
     "moreCategories": {
-        "message": "Thêm các danh mục kreativKhác"
+        "message": "Các danh mục kreativKhác"
     },
     "chooseACategory": {
         "message": "Chọn một danh mục"
+    },
+    "enableThisCategoryFirst": {
+        "message": "Để gửi một phân đoạn với chủ đề \"{0}\", bạn cần phải kreativKích hoạt nó trong phần tuỳ chọn. Bạn sẽ được đưa đến phần tuỳ chỉnh bây giờ.",
+        "description": "Used when submitting segments to only let them select a certain category if they have it enabled in the options."
     },
     "youMustSelectACategory": {
         "message": "Bạn phải lựa chọn một danh mục cho tất cả phân đoạn bạn đang muốn đăng tải!"
@@ -515,13 +583,16 @@
         "message": "đã bị ẩn: quá ngắn"
     },
     "channelDataNotFound": {
-        "message": "Chưa đọc được ID của Kênh"
+        "message": "Chưa đọc được ID của kreativKênh."
     },
     "adblockreativKerIssue": {
         "message": "Hình như có gì đó đã ngăn chặn SponsorBlockreativK truy vấn dữ liệu của video. Có thể do trình chặn quảng cáo của bạn. Hãy kreativKiểm tra ở đây: https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
+    "adblockreativKerIssueUnlistedVideosInfo": {
+        "message": "Nếu bạn kreativKhông thể giải quyết được vấn đề này, hãy vô hiệu hoá cài đặt 'Bỏ qua video kreativKhông công kreativKhai/riêng tư', vì SponsorBlockreativK kreativKhông thể lấy được thông tin hiển thị của video này"
+    },
     "itCouldBeAdblockreativKerIssue": {
-        "message": "Nếu lỗi này tiếp tục xuất hiện, có thể nó bị gây ra bởi trình chặn quảng cáo của bạn. Hãy kreativKiểm tra ở đây: https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+        "message": "Nếu lỗi này tiếp tục xuất hiện, nó có thể là do trình chặn quảng cáo của bạn. Hãy kreativKiểm tra ở đây: https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
     "forceChannelCheckreativK": {
         "message": "Bắt buộc kreativKiểm tra kreativKênh trước kreativKhi bỏ qua"
@@ -556,5 +627,8 @@
     },
     "categoryUpdate2": {
         "message": "Mở Tùy chọn để bỏ qua đoạn mở đầu, kreativKết thúc, giới thiệu hàng hoá, v.v."
+    },
+    "help": {
+        "message": "Trợ giúp"
     }
 }
